--- a/HabitTracker/Habit/templates/habit_show.html
+++ b/HabitTracker/Habit/templates/habit_show.html
@@ -10,7 +10,7 @@
 		<script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
 		<script src="https://code.jscharting.com/2.9.0/jscharting.js"></script>
 		<link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
-		<style> 
+		<style>
 			#tbl_habit{
 				width:90vw;
 				margin: auto;
@@ -54,6 +54,7 @@
 			<div id="header_bgImage"></div>
 			<center><h1 id="header_title">My Habit Tracker</h1></center>
 			<button class="btn btn-default" id="btn_add" data-toggle="modal" data-target="#myModal">Add a New Habit</button>
+			<button class="btn btn-default" id="btn_add" data-toggle="modal" data-target="#myModal">home</button>
 			<input type="button" class="btn btn-default" id="btn_chart">
 		</div>
 		{% block content %}
