--- a/HabitTracker/Habit/templates/edit_show.html
+++ b/HabitTracker/Habit/templates/edit_show.html
@@ -20,6 +20,7 @@
 <div id="edit_box">
 	{% for filters in filter %}
 	<div>
+		<input type="hidden" value={{filters.habit}} id="fhabit" name="fhabit">
 		<label>Habit:</label>
 		<input type="text" name="ehabit" id="ehabit" value={{filters.habit}} class="form-control"><br />
 		<label>Time:</label>
@@ -119,6 +120,7 @@
 <script>
 	$(document).ready(function(){
 		$("#eEdit").click(function(){
+			let fhabit = $("#fhabit").val();
 			let habit = $("#ehabit").val();
 			let time = $("#eTime").val();
 			let Mon = $("#eMon").is(':checked');
@@ -129,9 +131,10 @@
 			let Sat = $("#eSat").is(':checked');
 			let Sun = $("#eSun").is(':checked');
 			$.ajax({
-				url: '/habit/modifyhabit/',
+				url: '/modifyhabit/',
 				method: 'POST',
 				data:{
+					fhabit: fhabit,
 					habit: habit,
 					Time: time,
 					Mon: Mon,
@@ -143,7 +146,7 @@
 					Sun:Sun,
 				},
 				success: function(result){
-					document.location = "/habit/";
+					document.location = "/";
 				}
 			});
 		});
@@ -151,13 +154,13 @@
 		$("#eDelete").click(function(){
 			let habit = $("#ehabit").val();
 			$.ajax({
-				url: '/habit/deletehabit/',
+				url: '/deletehabit/',
 				method: 'POST',
 				data:{
 					ehabit: habit,
 				},
 				success: function(result){
-					document.location = "/habit/";
+					document.location = "/";
 				}
 			});
 		});
