--- a/HabitTracker/Habit/templates/habit_show.html
+++ b/HabitTracker/Habit/templates/habit_show.html
@@ -177,7 +177,7 @@
 					if(localStorage.getItem("btn_value") == "View Chart"){
 						localStorage.setItem("btn_value", "View Table");
 						$("#btn_chart").val(localStorage.getItem("btn_value"));
-						document.location = "chartshow/";
+						document.location = "/habit/chartshow/";
 						return;
 					}
 					else{
